--- a/tiket.html
+++ b/tiket.html
@@ -13,7 +13,7 @@
         <h1>INDONESIAN HISTORY</h1>
         <nav>
             <ul>
-                <li><a href="museum.html">HOME</a></li>
+                <li><a href="index.html">HOME</a></li>
                 <li><a href="tiket.html">BOOKING</a></li>
                 <li><a href="koleksi.html">COLLECTION</a></li>
             </ul>
